analysis/vs_stable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-vs
  namespace: dev
  labels:
    app: rollouts-vs
    type: virtualservice
spec:
  gateways:
    - rollouts-gateway
  hosts:
    - rollouts-vs.local
  http:
    - name: primary
      route:
        - destination:
            host: rollouts-svc-stable
            port:
              number: 15372
          weight: 100
        - destination:
            host: rollouts-svc-canary
            port:
              number: 15372
          weight: 0
